force-app/main/default/objects/Account/fields/Account_Channel__c.field-meta.xml
<CustomField>
    <fullName>Account_Channel__c</fullName>
    <label>Account Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Channel</valueSetName>
    </valueSet>
</CustomField>