force-app/main/default/objects/Account/fields/Account_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Segment__c</fullName>
    <description>Khusus Bank
Private = Bank Swasta
Government = Bank Pemerintah</description>
    <label>Account Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Sub_Segment</valueSetName>
    </valueSet>
</CustomField>