force-app/main/default/objects/Account/fields/Actived__c.field-meta.xml
<CustomField>
    <fullName>Actived__c</fullName>
    <label>Actived</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>