force-app/main/default/objects/Account/fields/Address_matching_helper__c.field-meta.xml
<CustomField>
    <fullName>Address_matching_helper__c</fullName>
    <description>Technical helper field to enable address-based duplicate detection. Automatically populated with the first 255 characters of the Address field to bypass Matching Rule field type limitations.</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>