force-app/main/default/objects/Account/fields/Agency_Leads_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Leads_Id__c</fullName>
    <description>Leads ID from Agency</description>
    <label>Agency Leads Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>