force-app/main/default/objects/Account/fields/Akta_Pendirian_dan_Pengesahan__c.field-meta.xml
<CustomField>
    <fullName>Akta_Pendirian_dan_Pengesahan__c</fullName>
    <label>Akta Pendirian dan Pengesahan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>