force-app/main/default/objects/Account/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>25</length>
    <type>Text</type>
</CustomField>