force-app/main/default/objects/Account/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <label>Approval Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>