force-app/main/default/objects/Account/fields/Branch_Id__c.field-meta.xml
<CustomField>
    <fullName>Branch_Id__c</fullName>
    <label>Branch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>