force-app/main/default/objects/Account/fields/BranchId_formula__c.field-meta.xml
<CustomField>
    <fullName>BranchId_formula__c</fullName>
    <formula>BLANKVALUE( BranchId__c , IF(ISBLANK( Federated_Owner__c ), Owner.BranchId__c , Federated_Owner__r.BranchId__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch</label>
    <type>Text</type>
</CustomField>