force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(Account_Channel__c))),TEXT(Account_Channel__c), CASE(TEXT(Account_Segment__c),&apos;E&apos;,&apos;0&apos;, &apos;I&apos;,&apos;0&apos;,&apos;5&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>