force-app/main/default/objects/Account/fields/Company_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Company_Contact_Person__c</fullName>
    <label>Company Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>