force-app/main/default/objects/Account/fields/Company_Contact_Person_Title__c.field-meta.xml
<CustomField>
    <fullName>Company_Contact_Person_Title__c</fullName>
    <label>Company Contact Person Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>