force-app/main/default/objects/Account/fields/Company_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Customer_Email__c</fullName>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>