force-app/main/default/objects/Account/fields/Company_Customer_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Company_Customer_Email_Formula__c</fullName>
    <formula>Company_Customer_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Email</label>
    <type>Text</type>
</CustomField>