force-app/main/default/objects/Account/fields/Company_Mobile_Phone_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Company_Mobile_Phone_Contact_Person__c</fullName>
    <label>Company Mobile Phone Contact Person</label>
    <type>Phone</type>
</CustomField>