force-app/main/default/objects/Account/fields/Company_NIB__c.field-meta.xml
<CustomField>
    <fullName>Company_NIB__c</fullName>
    <label>Company NIB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>