force-app/main/default/objects/Account/fields/Company_SIUP__c.field-meta.xml
<CustomField>
    <fullName>Company_SIUP__c</fullName>
    <label>Company SIUP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>