force-app/main/default/objects/Account/fields/Customer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Consent__c</fullName>
    <label>Customer Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setuju</fullName>
            </value>
            <value>
                <fullName>Tidak Setuju</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>