force-app/main/default/objects/Account/fields/Customer_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>