force-app/main/default/objects/Account/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>RO PBF</fullName>
            </value>
            <value>
                <fullName>RO Non PBF (Other Product)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>