force-app/main/default/objects/Account/fields/Customer_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_Formula__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>