force-app/main/default/objects/Account/fields/Data_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Data_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Duplicate</label>
    <type>Checkbox</type>
</CustomField>