force-app/main/default/objects/Account/fields/DL__c.field-meta.xml
<CustomField>
    <fullName>DL__c</fullName>
    <label>DL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DN</fullName>
                <label>Dalam Negeri</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <label>Luar Negeri Asia</label>
            </value>
            <value>
                <fullName>LN</fullName>
                <label>Luar Negeri Non Asia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>