force-app/main/default/objects/Account/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>Is the Customer’s Email.
When there is already a value in SF DB for this field, the value will be replaced with the one from SF DB.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <length>40</length>
    <type>Text</type>
</CustomField>