force-app/main/default/objects/Account/fields/EmailThreadKey__c.field-meta.xml
<CustomField>
    <fullName>EmailThreadKey__c</fullName>
    <label>Email Thread Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>