force-app/main/default/objects/Account/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <label>Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employment</valueSetName>
    </valueSet>
</CustomField>