force-app/main/default/objects/Account/fields/First_Loan_Information__c.field-meta.xml
<CustomField>
    <fullName>First_Loan_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Loan Information</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leаds</relationshipLabel>
    <relationshipName>Le_ds</relationshipName>
    <type>Lookup</type>
</CustomField>