force-app/main/default/objects/Account/fields/First_Loan_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>First_Loan_Product_Type__c</fullName>
    <formula>TEXT( First_Loan_Information__r.Product_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>