force-app/main/default/objects/Account/fields/First_Loan_Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Loan_Referral_Name__c</fullName>
    <formula>First_Loan_Information__r.Referral_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Name</label>
    <type>Text</type>
</CustomField>