force-app/main/default/objects/Account/fields/Formatted_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Phone1__c</fullName>
    <description>IF(LEFT(Mobile_Phone_1__c, 2) == &quot;62&quot;, Mobile_Phone_1__c, &quot;62&quot; &amp; RIGHT( Mobile_Phone_1__c , LEN(Mobile_Phone_1__c)-1))</description>
    <formula>&apos;6289653550953&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted_Phone1</label>
    <type>Text</type>
</CustomField>