force-app/main/default/objects/Account/fields/Has_Beneficial_Owner__c.field-meta.xml
<CustomField>
    <fullName>Has_Beneficial_Owner__c</fullName>
    <label>Has Beneficial Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Mempunyai</label>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>Tidak Mempunyai</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>