force-app/main/default/objects/Account/fields/House_Phone__c.field-meta.xml
<CustomField>
    <fullName>House_Phone__c</fullName>
    <label>WhatsApp No</label>
    <type>Phone</type>
</CustomField>