force-app/main/default/objects/Account/fields/House_Phone_Area__c.field-meta.xml
<CustomField>
    <fullName>House_Phone_Area__c</fullName>
    <label>House Phone Area</label>
    <type>Phone</type>
</CustomField>