force-app/main/default/objects/Account/fields/House_PhoneF__c.field-meta.xml
<CustomField>
    <fullName>House_PhoneF__c</fullName>
    <formula>House_Phone_Area__c + House_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WhatsApp No</label>
    <type>Text</type>
</CustomField>