force-app/main/default/objects/Account/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>