force-app/main/default/objects/Account/fields/ID_Verification__c.field-meta.xml
<CustomField>
    <fullName>ID_Verification__c</fullName>
    <label>ID Verification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>