force-app/main/default/objects/Account/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <label>Industry Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>