force-app/main/default/objects/Account/fields/Input_By__c.field-meta.xml
<CustomField>
    <fullName>Input_By__c</fullName>
    <formula>IF(ISBLANK(OwnerId_Old__c), IF(ISBLANK( Federated_Fullname__c ), TRIM(  Owner.FirstName  &amp; &quot; &quot; &amp;  Owner.LastName ),  Federated_Fullname__c ), OwnerId_Old_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Input By</label>
    <type>Text</type>
</CustomField>