force-app/main/default/objects/Account/fields/Input_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Input_By_Id__c</fullName>
    <formula>IF(ISBLANK(  Federated_Owner__c  ),  OwnerId  , Federated_Owner__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Input By Id</label>
    <type>Text</type>
</CustomField>