force-app/main/default/objects/Account/fields/Insurance_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_ID__c</fullName>
    <externalId>true</externalId>
    <label>Insurance ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>