force-app/main/default/objects/Account/fields/Interest_COB__c.field-meta.xml
<CustomField>
    <fullName>Interest_COB__c</fullName>
    <label>Interest COB</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COB</valueSetName>
    </valueSet>
</CustomField>