force-app/main/default/objects/Account/fields/Is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Is_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Canceled</label>
    <type>Checkbox</type>
</CustomField>