force-app/main/default/objects/Account/fields/Is_General__c.field-meta.xml
<CustomField>
    <fullName>Is_General__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is General</label>
    <type>Checkbox</type>
</CustomField>