force-app/main/default/objects/Account/fields/Is_Last_Consent_More_Than_10_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Consent_More_Than_10_Minutes__c</fullName>
    <formula>BLANKVALUE( Last_Consent_Sent_At__c , $System.OriginDateTime) &lt; NOW() - 0.0069444444</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last Consent More Than 10 Minutes</label>
    <type>Checkbox</type>
</CustomField>