force-app/main/default/objects/Account/fields/is_Owner__c.field-meta.xml
<CustomField>
    <fullName>is_Owner__c</fullName>
    <formula>IF ($User.Id =  OwnerId ||  $Profile.Name = &apos;System Administrator&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Owner</label>
    <type>Checkbox</type>
</CustomField>