force-app/main/default/objects/Account/fields/IsOpenSync__c.field-meta.xml
<CustomField>
    <fullName>IsOpenSync__c</fullName>
    <formula>IF(((NOW() - Last_Sync__c) * 24 ) &gt; 3 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOpenSync</label>
    <type>Checkbox</type>
</CustomField>