force-app/main/default/objects/Account/fields/Kategori_Usia__c.field-meta.xml
<CustomField>
    <fullName>Kategori_Usia__c</fullName>
    <formula>IF(YEAR(TODAY()) - VALUE(SCC_TanggalLahir__c) &gt;= 2011, &quot;Generasi Alpha&quot;,
IF(YEAR(TODAY()) - VALUE(SCC_TanggalLahir__c) &gt;= 1997, &quot;Generasi Z&quot;,
IF(YEAR(TODAY()) - VALUE(SCC_TanggalLahir__c) &gt;= 1981, &quot;Generasi Milenial&quot;,
IF(YEAR(TODAY()) - VALUE(SCC_TanggalLahir__c) &gt;= 1965, &quot;Generasi X&quot;,
IF(YEAR(TODAY()) - VALUE(SCC_TanggalLahir__c) &gt;= 1946, &quot;Baby Boomer&quot;,
IF(YEAR(TODAY()) - VALUE(SCC_TanggalLahir__c) &lt; 1946, &quot;Silent Generatioin&quot;,
&quot;N/A&quot;))))))</formula>
    <label>Kategori Usia</label>
    <type>Text</type>
</CustomField>