force-app/main/default/objects/Account/fields/KITAP_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>KITAP_Expiry_Date__c</fullName>
    <label>KITAP Expiry Date</label>
    <type>Date</type>
</CustomField>