force-app/main/default/objects/Account/fields/KITAS_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>KITAS_Expiry_Date__c</fullName>
    <label>KITAS Expiry Date</label>
    <type>Date</type>
</CustomField>