force-app/main/default/objects/Account/fields/KITAS_Number__c.field-meta.xml
<CustomField>
    <fullName>KITAS_Number__c</fullName>
    <label>KITAS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>