force-app/main/default/objects/Account/fields/KTP_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>KTP_Expiry_Date__c</fullName>
    <label>KTP Expiry Date</label>
    <type>Date</type>
</CustomField>