force-app/main/default/objects/Account/fields/KTP_Number__c.field-meta.xml
<CustomField>
    <fullName>KTP_Number__c</fullName>
    <label>KTP Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>