force-app/main/default/objects/Account/fields/Last_Consent_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Consent_Sent_At__c</fullName>
    <label>Last Consent Sent At</label>
    <type>DateTime</type>
</CustomField>