force-app/main/default/objects/Account/fields/Lead_Note__c.field-meta.xml
<CustomField>
    <fullName>Lead_Note__c</fullName>
    <label>Lead Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>