force-app/main/default/objects/Account/fields/Lead_Progress__c.field-meta.xml
<CustomField>
    <fullName>Lead_Progress__c</fullName>
    <label>Lead Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Informations</fullName>
                <default>true</default>
                <label>Customer Informations</label>
            </value>
            <value>
                <fullName>Loan Informations</fullName>
            </value>
            <value>
                <fullName>Customer Consent</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>