force-app/main/default/objects/Account/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id ,  Name  , &apos;_self&apos;)</formula>
    <label>Link</label>
    <type>Text</type>
</CustomField>