force-app/main/default/objects/Account/fields/Lintaswata_Createddate__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Createddate__c</fullName>
    <label>Lintaswata Createddate</label>
    <type>Date</type>
</CustomField>