force-app/main/default/objects/Account/fields/Lintaswata_LastmodifiedbyId__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_LastmodifiedbyId__c</fullName>
    <label>Lintaswata LastmodifiedbyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>