force-app/main/default/objects/Account/fields/Lintaswata_Lastmodifieddate__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Lastmodifieddate__c</fullName>
    <label>Lintaswata Lastmodifieddate</label>
    <type>Date</type>
</CustomField>