force-app/main/default/objects/Account/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Undefined</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Belum Menikah</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Kawin</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Cerai</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Duda / Janda</label>
            </value>
            <value>
                <fullName>Menikah</fullName>
                <isActive>false</isActive>
                <label>Menikah</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>