force-app/main/default/objects/Account/fields/Mobile_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Formula__c</fullName>
    <formula>Mobile_Phone_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Phone 1</label>
    <type>Text</type>
</CustomField>