force-app/main/default/objects/Account/fields/MoU_PKS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MoU_PKS_End_Date__c</fullName>
    <label>MoU PKS End Date</label>
    <type>DateTime</type>
</CustomField>